--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,7 +10,7 @@
     margin: 0;
     padding: 0;
     font-family: var(--fonte-padrao);
-    background-color: black;
+    background-color: wheat;
 }
 
 header{
@@ -31,4 +31,14 @@ nav{
     justify-content: center;
     align-items: center;
     gap: 15px;
+}
+main{
+    
+}
+
+footer{
+    width: 100%;
+    height: 75px;
+    background-color: black;
+    color: white;
 }
