--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,35 +10,32 @@
     margin: 0;
     padding: 0;
     font-family: var(--fonte-padrao);
-    background-color: wheat;
+}
+
+body{
+    background-color: #0A0A0D;
+    color: #DAD6DB;
 }
 
 header{
     display: flex;
+    justify-content: center;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 75px;
-    padding: 15px;
-    background-color: rgba(128, 128, 128, 0.685);
-    color: white;
+    justify-content: space-between;
+    padding: 25px;
 }
 
 nav{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-}
-main{
-    
+    gap: 65px;
 }
 
-footer{
-    width: 100%;
-    height: 75px;
-    background-color: black;
-    color: white;
+nav a{
+    color: #DAD6DB;
+    text-decoration: none;
+}
+
+main{
+    height: 80%;
 }
